--- a/set_1/challenge_7/Cargo.toml
+++ b/set_1/challenge_7/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+openssl-sys = "0.9"
+openssl = "0.10"
+base64 = "0.13.0"
