--- a/set_1/challenge_4/Cargo.toml
+++ b/set_1/challenge_4/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cryptopals = { path = "../../cryptopals" }
 hex = "0.3.1"
 base64 = "0.13.0"
